# cnn_model

./: .gitignore  Makefile  README.md  pyproject.toml
aanntwin/: __main__.py  datasets.py  models.py  normalize.py
aanntwin/scripts/: generate_csv.py  normalize.py  quantize.py  sweep_model_parameters.py  sweep_noise.py  test_bits.py
cnn_model/: __main__.py  basic.py  common.py  datasets.py  models.py  parser.py  quantize.py
cnn_model/scripts/: analyze_weights.py  generate_csv.py  ideal.py  ideal_mnist.py  normalize.py  quantize.py  sweep_model_parameters.py  sweep_noise.py  test_bits.py
